--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <ul id = "display" class="col-sm-6"> </ul>
       <ul id = "displayBad" class="col-sm-6"></ul>
     </div>
+    <h2 id = "nextFight"></h2>
   </div> 
 
 <script>
@@ -29,7 +30,7 @@ fetch('https://cdn.rawgit.com/akabab/superhero-api/0.2.0/api/all.json')
   }).slice(0,15)
   let listGood = ""
   for (let good of goods) {
-    listGood += `<li> ${good.name}<img src="${good.images.xs}"/><button id="${good.id}">choose</button></li>`
+    listGood += `<li> <img src="${good.images.xs}"/>${good.name}<button id="${good.id}">choose</button></li>`
   }
   const htmlList = document.getElementById('display')
   htmlList.innerHTML = listGood
@@ -39,7 +40,7 @@ fetch('https://cdn.rawgit.com/akabab/superhero-api/0.2.0/api/all.json')
   }).slice(0,15)
   let listBad = ""
   for (let bad of bads) {
-    listBad += `<li>${bad.name} <img src="${bad.images.xs}"/><button  id="${bad.id}">choose</button></li>`
+    listBad += `<li><img src="${bad.images.xs}"/>${bad.name} <button  id="${bad.id}">choose</button></li>`
   }
   const htmlListbad = document.getElementById('displayBad')
   htmlListbad.innerHTML = listBad
@@ -67,6 +68,16 @@ fetch('https://cdn.rawgit.com/akabab/superhero-api/0.2.0/api/all.json')
       if (player1 && player2) {
         // both players are chosen, start the fight
         console.log('start the fight')
+        const htmlfight = `Next fight : ${player1.name} vs ${player2.name}`
+        console.log(htmlfight)
+
+        //display player1.name vs player2.name in html :  TODO
+
+         const nextfight = document.getElementById('nextFight')
+          // console.log(nextfight)
+          nextfight.innerHTML = htmlfight    
+
+         
       }
     })
   }
