--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class = "container">
     <h1>Selectionner votre personnage :</h1>
     <div class ="row" >
-      <ul id = "display" class="col-sm-6"> </ul>
-      <ul id = "displayBad" class="col-sm-6"></ul>
+      <ul id = "display" class="col-lg-6"> </ul>
+      <ul id = "displayBad" class="col-lg-6"></ul>
     </div>
     <h2 id = "nextFight"></h2>
   </div> 
@@ -30,7 +30,7 @@ fetch('https://cdn.rawgit.com/akabab/superhero-api/0.2.0/api/all.json')
   }).slice(0,15)
   let listGood = ""
   for (let good of goods) {
-    listGood += `<li> <img src="${good.images.xs}"/>${good.name}<button id="${good.id}">choose</button></li>`
+    listGood += `<li> <img src="${good.images.sm}"/>${good.name}<button type="button" class="btn btn-primary" id="${good.id}">choose</button></li>`
   }
   const htmlList = document.getElementById('display')
   htmlList.innerHTML = listGood
@@ -40,7 +40,7 @@ fetch('https://cdn.rawgit.com/akabab/superhero-api/0.2.0/api/all.json')
   }).slice(0,15)
   let listBad = ""
   for (let bad of bads) {
-    listBad += `<li><img src="${bad.images.xs}"/>${bad.name} <button  id="${bad.id}">choose</button></li>`
+    listBad += `<li><img src="${bad.images.sm}"/>${bad.name} <button type="button" class="btn btn-danger"  id="${bad.id}">choose</button></li>`
   }
   const htmlListbad = document.getElementById('displayBad')
   htmlListbad.innerHTML = listBad
