--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css" />
+<link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -30,7 +31,7 @@ fetch('https://cdn.rawgit.com/akabab/superhero-api/0.2.0/api/all.json')
   }).slice(0,15)
   let listGood = ""
   for (let good of goods) {
-    listGood += `<li> <img src="${good.images.sm}"/>${good.name}<button type="button" class="btn btn-primary" id="${good.id}">choose</button></li>`
+    listGood += `<li> <img src="${good.images.sm}"/><br>${good.name}<button type="button" class="btn btn-primary" id="${good.id}">choose</button><br></li>`
   }
   const htmlList = document.getElementById('display')
   htmlList.innerHTML = listGood
@@ -40,7 +41,7 @@ fetch('https://cdn.rawgit.com/akabab/superhero-api/0.2.0/api/all.json')
   }).slice(0,15)
   let listBad = ""
   for (let bad of bads) {
-    listBad += `<li><img src="${bad.images.sm}"/>${bad.name} <button type="button" class="btn btn-danger"  id="${bad.id}">choose</button></li>`
+    listBad += `<li><img src="${bad.images.sm}"/><br>${bad.name} <button type="button" class="btn btn-danger"  id="${bad.id}">choose</button></li>`
   }
   const htmlListbad = document.getElementById('displayBad')
   htmlListbad.innerHTML = listBad
